Add sklearn logic

--- a/Purchase_learning.ipynb
+++ b/Purchase_learning.ipynb
@@ -2,12 +2,135 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/kevin/anaconda3/envs/ml_expense/lib/python3.5/site-packages/ipykernel_launcher.py:18: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " 1) DELTA_RAISE                    0.327614\n",
+      " 2) CATEGORY                       0.280000\n",
+      " 3) DELTA_DAY                      0.177883\n",
+      " 4) RESOLD                         0.086336\n",
+      " 5) ACTIVE_LOANS                   0.083658\n",
+      " 6) UNEMPL                         0.044510\n"
+     ]
+    },
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAagAAAEYCAYAAAAJeGK1AAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAIABJREFUeJzt3Xu8HWV97/HPlwiIiOUWbgnhoghNLSgGqEesRSoFqg2m\nVYioBcVIK0W0nIptD3qktvUUq7UiKXA41Xo0ViE01MhNqWgRm3AnQGwMYpKihIuKgGLk2z9mNgwr\na++9kr3Wnpm1v+/Xa78y8zwze/9m7ez1W/PMc5FtIiIimmaLugOIiIjoJgkqIiIaKQkqIiIaKQkq\nIiIaKQkqIiIaKQkqIiIaKQkqIiIaKQkqGkXSdyU9Luknla89Jvg9f0PS2n7F2OPP/EdJfzGZP3M0\nkj4g6TN1xxGxqZKgoolea/u5la//qjMYSc+q8+dPRJtjj0iCitaQ9GuSrpf0Q0m3SvqNSt3Jku6S\n9Iik1ZLeUZZvC3wZ2KN6R9Z5h9N5l1Xeyb1X0m3Ao5KeVZ53iaT1ku6RdHqPce8tyWWMayQ9LOlU\nSYdIuq28nk9Ujj9J0r9L+oSkH0m6W9KRlfo9JC2R9JCkVZLeXqn7gKQvSvqMpB8DpwJ/ChxfXvut\nY71e1ddC0h9Lul/SfZJOrtRvI+kjku4t4/uGpG16+B2dVP6sR8rX78ReXr+YuvLpKlpB0gzgS8Cb\ngSuAI4FLJB1gez1wP/AaYDXw68CXJS2zfZOkY4DP2J5Z+X69/Nj5wG8DDwBPApcD/1KWzwSukbTS\n9pU9XsZhwH5lfEvK6/hNYEvgZklfsP21yrFfBHYG5gGXStrH9kPAIuAOYA/gAOBqSd+x/dXy3LnA\n64G3AFuX3+MFtt9UiWXU16us3w34JWAG8Grgi5Ius/0wcC7wK8D/AL5fxvrkWL8j4DHg48AhtldK\n2h3YscfXLaao3EFFE11WfgL/oaTLyrI3AUttL7X9pO2rgeXAsQC2v2T7Oy58DbgKeMUE4/i47TW2\nHwcOAabb/qDtJ2yvBi4ETtiE73eO7Z/avgp4FPic7fttrwO+Drykcuz9wMds/9z254GVwG9L2hN4\nOfDe8nvdAlxEkYxGfNP2ZeXr9Hi3QHp4vX4OfLD8+UuBnwD7S9oCeCvwLtvrbP/C9vW2f8Y4vyOK\nJP8iSdvYvs/2ik147WIKSoKKJjrO9vbl13Fl2V7A6yuJ64fA4cDuAJKOkXRD2ez1Q4o3xZ0nGMea\nyvZeFM2E1Z//p8Cum/D9flDZfrzL/nMr++v8zJmc76W4Y9oDeMj2Ix11M0aJu6seXq8HbW+o7D9W\nxrcz8GzgO12+7ai/I9uPAsdTNDneJ+lL5Z1VxKiSoKIt1gD/VElc29ve1vZfS9oauISi6WlX29sD\nS4GRdrxuU/Y/Cjynsr9bl2Oq560B7un4+dvZPrbLef0wQ89sh5wF/Ff5taOk7Trq1o0S90b7Pbxe\nY3kA+Cnw/C51o/6OAGxfafvVFB8q7qa4A40YVRJUtMVngNdK+i1J0yQ9u3yYPxPYiuJZy3pgQ/nM\n6ajKuT8AdpL0S5WyW4BjJe0oaTfgjHF+/n8Aj5QdJ7YpY3iRpEP6doXPtAtwuqQtJb0e+GWK5rM1\nwPXAX5WvwYHA2yhen9H8ANi7bJ6D8V+vUdl+ErgY+Nuys8Y0SS8rk96ovyNJu0qaq6LTys8omgyf\n3MTXJKaYJKhohfKNeS5Fs9p6ik/r/xPYomzuOh34Z+Bh4I0UnRBGzr0b+Bywumx62gP4J+BW4LsU\nz18+P87P/wVFp4IXA/dQ3ElcRNGRYBC+RdGh4gHgQ8Dv2X6wrJsP7E1xN7UYeL/ta8b4Xl8o/31Q\n0k3jvV49OBO4HVgGPAR8mOL3MOrvqPx6TxnzQ8ArgT/YhJ8ZU5CyYGFEs0g6CTjF9uF1xxJRp9xB\nRUREIyVBRUREI6WJLyIiGil3UBER0UiNnOpo55139t577113GBERMQA33njjA7anj3dcIxPU3nvv\nzfLly+sOIyIiBkDSvb0clya+iIhopCSoiIhopCSoiIhopCSoiIhopCSoiIhopCSoiIhopEZ2M6/b\npSvvqzuEns3bf/e6Q4iIGIjcQUVERCMlQUVERCMlQUVERCMlQUVERCMlQUVERCMlQUVERCMlQUVE\nRCMlQUVERCMlQUVERCMlQUVERCP1lKAkHS1ppaRVks7qUj9X0m2SbpG0XNLhvZ4bERHRzbgJStI0\n4DzgGGA2MF/S7I7DvgIcZPvFwFuBizbh3IiIiI30cgd1KLDK9mrbTwCLgLnVA2z/xLbL3W0B93pu\nREREN70kqBnAmsr+2rLsGSS9TtLdwJco7qJ6Prc8f0HZPLh8/fr1vcQeERFDrG+dJGwvtn0AcBxw\nzmacf4HtObbnTJ8+vV9hRURES/WSoNYBe1b2Z5ZlXdm+DthX0s6bem5ERMSIXhLUMmA/SftI2go4\nAVhSPUDSCySp3D4Y2Bp4sJdzIyIiuhl3RV3bGySdBlwJTAMutr1C0qll/ULgd4G3SPo58DhwfNlp\nouu5A7qWiIgYIj0t+W57KbC0o2xhZfvDwId7PTciImI8mUkiIiIaKQkqIiIaKQkqIiIaKQkqIiIa\nqadOEjEcLl15X90h9Gze/rvXHUJE1Cx3UBER0UhJUBER0UhJUBER0UhJUBER0UhJUBER0UhJUBER\n0UhJUBER0UhJUBER0UhJUBER0UhJUBER0Ug9JShJR0taKWmVpLO61J8o6TZJt0u6XtJBlbrvluW3\nSFrez+AjImJ4jTsXn6RpwHnAq4G1wDJJS2zfWTnsHuCVth+WdAxwAXBYpf4I2w/0Me6IiBhyvdxB\nHQqssr3a9hPAImBu9QDb19t+uNy9AZjZ3zAjImKq6SVBzQDWVPbXlmWjeRvw5cq+gWsk3ShpwaaH\nGBERU1Ffl9uQdARFgjq8Uny47XWSdgGulnS37eu6nLsAWAAwa9asfoYVEREt1Msd1Dpgz8r+zLLs\nGSQdCFwEzLX94Ei57XXlv/cDiymaDDdi+wLbc2zPmT59eu9XEBERQ6mXBLUM2E/SPpK2Ak4AllQP\nkDQLuBR4s+1vV8q3lbTdyDZwFHBHv4KPiIjhNW4Tn+0Nkk4DrgSmARfbXiHp1LJ+IXA2sBPwSUkA\nG2zPAXYFFpdlzwI+a/uKgVxJREQMlZ6eQdleCiztKFtY2T4FOKXLeauBgzrLIyIixpOZJCIiopGS\noCIiopGSoCIiopGSoCIiopGSoCIiopGSoCIiopGSoCIiopGSoCIiopGSoCIiopGSoCIiopGSoCIi\nopGSoCIiopGSoCIiopGSoCIiopGSoCIiopGSoCIiopF6SlCSjpa0UtIqSWd1qT9R0m2Sbpd0vaSD\nej03IiKim3ETlKRpwHnAMcBsYL6k2R2H3QO80vavAucAF2zCuRERERvp5Q7qUGCV7dW2nwAWAXOr\nB9i+3vbD5e4NwMxez42IiOimlwQ1A1hT2V9blo3mbcCXN/VcSQskLZe0fP369T2EFRERw6yvnSQk\nHUGRoN67qefavsD2HNtzpk+f3s+wIiKihZ7VwzHrgD0r+zPLsmeQdCBwEXCM7Qc35dyIiIhOvdxB\nLQP2k7SPpK2AE4Al1QMkzQIuBd5s+9ubcm5EREQ3495B2d4g6TTgSmAacLHtFZJOLesXAmcDOwGf\nlASwoWyu63rugK4lIiKGSC9NfNheCiztKFtY2T4FOKXXcyMiIsaTmSQiIqKRkqAiIqKRkqAiIqKR\nkqAiIqKRkqAiIqKReurFF9Fkl668r+4QejZv/93rDiGiNXIHFRERjZQEFRERjZQEFRERjZQEFRER\njZQEFRERjZQEFRERjZQEFRERjZQEFRERjZQEFRERjdRTgpJ0tKSVklZJOqtL/QGSvinpZ5LO7Kj7\nrqTbJd0iaXm/Ao+IiOE27lRHkqYB5wGvBtYCyyQtsX1n5bCHgNOB40b5NkfYfmCiwUZExNTRyx3U\nocAq26ttPwEsAuZWD7B9v+1lwM8HEGNERExBvSSoGcCayv7asqxXBq6RdKOkBZsSXERETF2TMZv5\n4bbXSdoFuFrS3bav6zyoTF4LAGbNmjUJYUVERJP1cge1Dtizsj+zLOuJ7XXlv/cDiymaDLsdd4Ht\nObbnTJ8+vddvHxERQ6qXBLUM2E/SPpK2Ak4AlvTyzSVtK2m7kW3gKOCOzQ02IiKmjnGb+GxvkHQa\ncCUwDbjY9gpJp5b1CyXtBiwHngc8KekMYDawM7BY0sjP+qztKwZzKRERMUx6egZleymwtKNsYWX7\n+xRNf51+DBw0kQAjImJqykwSERHRSElQERHRSElQERHRSElQERHRSElQERHRSElQERHRSElQERHR\nSElQERHRSElQERHRSElQERHRSElQERHRSElQERHRSElQERHRSElQERHRSElQERHRSElQERHRSD0l\nKElHS1opaZWks7rUHyDpm5J+JunMTTk3IiKim3ETlKRpwHnAMRTLuM+XNLvjsIeA04FzN+PciIiI\njfRyB3UosMr2attPAIuAudUDbN9vexnw8009NyIiopteEtQMYE1lf21Z1ouez5W0QNJyScvXr1/f\n47ePiIhh1ZhOErYvsD3H9pzp06fXHU5ERNSslwS1Dtizsj+zLOvFRM6NiIgprJcEtQzYT9I+krYC\nTgCW9Pj9J3JuRERMYc8a7wDbGySdBlwJTAMutr1C0qll/UJJuwHLgecBT0o6A5ht+8fdzh3UxURE\nxPAYN0EB2F4KLO0oW1jZ/j5F811P50ZERIynMZ0kIiIiqnq6g4qIyXfpyvvqDqFn8/bfve4QYggl\nQUXEpErijV6liS8iIhopCSoiIhopCSoiIhopCSoiIhopCSoiIhopCSoiIhopCSoiIhopCSoiIhop\nCSoiIhopCSoiIhopCSoiIhopCSoiIhqppwQl6WhJKyWtknRWl3pJ+nhZf5ukgyt135V0u6RbJC3v\nZ/ARETG8xp3NXNI04Dzg1cBaYJmkJbbvrBx2DLBf+XUYcH7574gjbD/Qt6gjImLo9XIHdSiwyvZq\n208Ai4C5HcfMBT7twg3A9pIyT31ERGy2XhLUDGBNZX9tWdbrMQaukXSjpAWbG2hEREwtk7Fg4eG2\n10naBbha0t22r+s8qExeCwBmzZo1CWFFREST9XIHtQ7Ys7I/syzr6RjbI//eDyymaDLciO0LbM+x\nPWf69Om9RR8REUOrlzuoZcB+kvahSDonAG/sOGYJcJqkRRSdI35k+z5J2wJb2H6k3D4K+GD/wo+I\naIYsZd9/4yYo2xsknQZcCUwDLra9QtKpZf1CYClwLLAKeAw4uTx9V2CxpJGf9VnbV/T9KiIiYuj0\n9AzK9lKKJFQtW1jZNvDOLuetBg6aYIwRETEFZSaJiIhopCSoiIhopCSoiIhopCSoiIhopCSoiIho\npCSoiIhopCSoiIhopCSoiIhopCSoiIhopCSoiIhopCSoiIhopCSoiIhopCSoiIhopCSoiIhopCSo\niIhopCSoiIhopJ4SlKSjJa2UtErSWV3qJenjZf1tkg7u9dyIiIhuxk1QkqYB5wHHALOB+ZJmdxx2\nDLBf+bUAOH8Tzo2IiNhIL3dQhwKrbK+2/QSwCJjbccxc4NMu3ABsL2n3Hs+NiIjYyLN6OGYGsKay\nvxY4rIdjZvR4LgCSFlDcfQH8RNLKHmJrm52BB+oOos+G8Zog19U2ua522auXg3pJUJPC9gXABXXH\nMUiSltueU3cc/TSM1wS5rrbJdQ2nXhLUOmDPyv7MsqyXY7bs4dyIiIiN9PIMahmwn6R9JG0FnAAs\n6ThmCfCWsjffrwE/sn1fj+dGRERsZNw7KNsbJJ0GXAlMAy62vULSqWX9QmApcCywCngMOHmscwdy\nJe0wjE2Yw3hNkOtqm1zXEJLtumOIiIjYSGaSiIiIRkqCioiIRkqCioiIRkqCip5J2rvuGCKmIkld\nJzgYdklQAyLpc5Xtv+yo+/LkR9QX10g6S1JjBnj3i6TLJc2qO45+k7S/pI9I+lL5da6k/euOq98k\n7SBJdccxQF+oO4A6JEENzgGV7aM76nabzED66CXArsCNkl5RdzB99lngK5LeW05y3HqSXgb8G/AI\nRXflC4FHgWvL8YqtJOlsSQeU21tLuhb4DvADSb9Zb3QDM8zJd1RD90m4Qcbqv9/Kvv22HwHeLeml\nFG/ma4EnKf54bPvAWgOcANufk/SvwAeA5ZI+RXFtI/Ufryu2CTgbmG/73ypll0n6KvB+ilUG2uh4\n4Jxy+/fLf6cDLwQ+BVxTR1AD1sr3jIlKghqc50j6VYq71G3KbZVf29Qa2QRIehXwd8BFFEupPDn2\nGa3yOPAg8ByKN7y2X9vzO5ITALa/JqnNA0Cf8NMDOH8LWGT7F8BdbW5+lnQ53RORgJ0mOZxGaO0v\nswUeAD7ZZXtkv3UkLaKYT/GNtm+vO55+knQkReK9Anip7Z/UHFI/PDJG3aOTFkX//UzSi4AfAEcA\nZ1bqnlNPSH1x7mbWDa0kqAGxfXjdMQzANbYvqjuIATkHONH2rXUH0kd7SurWNCmKpXDa6gzgixR3\nuR+1fQ+ApGOBm+sMbCLKO9sXAy8AVti+q+6Y6papjgakfE6z1vYPyv0TgXnAvcAHbf+wzvg2V9mB\nYAfbD5T7WwEnAe+2/ct1xtZvkrYBjgNOsN26hTYl/f5Y9bY/NVmxxPgknQ28CbiRYt28v7J9Yb1R\n1SsJakAk3QgcZftBSYdTdBM9A3gxxbOBN9Qa4GaQdALwDxTNQ/8JfAi4mGLW+nNs31RjeH1RPsM4\nBnhj+e/lwKW2F9caWJ9JOtf2meMf2TyS3jJGtW3/06QF00eSVgCH2H5M0k7AFbYPqTuuOiVBDYik\nW20fVG5/AnjQ9vs769pE0h3AcbZXSToY+Cbwe7Yvrzm0CSs7f8ynmJX/68DngY/Z7mnlz7aR9D3b\nrRz3JenvR6n6HWCG7VY+upB0k+2DK/s32n5pnTHVrZW/yJaYJmla2bvoSODUSl1bx589YXsVgO2b\nJP3nMCSn0jUUienltr8LIOkjtUY0WK0dV2P7j0a2y8G5JwLvBW6guKtvq30ljayXJ+D5lX1s/049\nYdUnCWpw/pliQOR64AmKNz8kPZ+xe1c12S6S3lPZ3766b/tva4ipXw6lWFDzWkl3A4so1jBrLUk7\njlZFixMUPNUUexJFD74bKO7kV9Ya1MR1Pueckj33qtLEN0Dls6fdKdqSHynLDgCea3t5rcFtBknv\nH6ve9v+erFgGpfxE/gqK5r55wH8Ai21fXGtgm0HSPRTjarolI9ved5JD6gtJ7wTeBXwF+PDIHW8M\nnySoAZH0vLHqbf94smKJzVN+Sj+KohffWA/mYxJJehK4H1jPMwe2tnpGE0m3jVXf1uuaiDTxDc4K\nnv7j6fwEa6CtD6iPAd4HzC6LVlB8il1aX1T9UXahP4qn51G8C7iyzddWDgM4EfiVsmgF8FnbP6sv\nqgnbp+4ABuRJiveGz1L0Hn283nDqlzuo6JmktwPvAP4EGGminAP8NXCR7dZOnyNpd+CrFFMd3Uzx\noeLFwI7AESPj2dpE0mxgCfDvFGNrAF4KvByYa3tFXbENQtmkPt/2O+uOZXOVjwDmA68F7qRIVlfZ\n3lBrYDVJgppE5XpKJ1D8EbWxm/mdwOG2H+oo3wn4RpsH6kr6f8Adtj/SUf5u4EDbJ9cT2eaT9BXg\nr21f3VH+m8Cf2T6insj6R9JLKMasvR64h2LM2mjd0FtF0vEU811+2Pbf1B1PHZKgBkzSrsAbKP6I\nXgL8DcUfUeumZJF012hJaKy6NpB0t+0DNrWuyca5ptb+viS9kOIuYz7FvJafB84chjFrkmZQfIh9\nHfAwRW/gxUMyN+QmyzOoAZH0Voo/oH0pZpF4J3CJ7f9Va2AT82NJB3XOVyfpINrbdX7EWO39bX0W\nsIWkrTufN0l6Nu3+27+bYtjGa0bG5ZV3uq0m6WvAdhRJ6WSK5maArSTt2NlyMRW0+T9p0/0DcD3F\n+IybASS1/Xb1j4ElZXPYyDONORRr8ryptqj645ckdRsIKWDMHpkN9mngEknvtH0vPNXM/HGgldMB\nlebx9Ji1KyjGrLV6XFdpL4pOEu8AFlTKVZa3cljARKSJb0Ak7ULRtDcf2IGiGeIU23vWGtgESdoN\n+EOe7hV2J3Ce7e/XF9XESRrzDdv2mycrln6SdBpFp5bnULzR/QQ4dxie00jalmJw63zgVRQJebHt\nq2oNLPomCWoSSNqLsnMExewEi22fXW9UsTkkvcn2Z+qOY1NJ2g6eWhV56EjagaKjxPG2j6w7ns1R\n/b8l6eW2/71Sd5rtT9QXXT2SoCaZpF+mGPg55qwMTSRpLjDT9nnl/rco1uQBeK/tL9QW3CTpnNCz\nySS9Frit0rx3NvC7FEu+vGtkHaW2knQElfFdtq+tM56Jqv7f6jJxbGv+3/VTWyctbbPdKOZ9a6M/\noRhXM2Jr4BDgN3jmZLjDrE3POj5EMdsCkl5D8ZzwrRS/w4U1xjUhkmaUH44+QPFcZl/gA5L+Q9Ie\ntQY3MRplu9v+lJBOEgMi6ZXA+cAewGXA/6FYO2kb4C9qDG0itrK9prL/DdsPAg+WzwOmgjY1Odj2\nY+X2POD/2r4RuFHSH9YY10R9Ajjf9j9WC8t1os5n40lX28KjbHfbnxJyBzU4HwNOp1ha+1+BbwGf\ns31Qi5vCdqju2D6tsjudqaFNn2Ql6bmStqBY8uUrlbpn1xRTP8zuTE4Atj/N09NUtdEBkm6TdHtl\ne2R//7qDq0PuoAbI9jXl5hclfcj239Ua0MR9S9LbO5ehlvQOilm/h5Kk6bbXl7s31BrMpvkYcAvw\nY+CukRn0y9kX7qszsAnq+sG6TMRtXiKllQOnBymdJAZE0mqKJd5HfBR4ajCh7SUbndRwZdf5y4Cf\nASPLu7+U4lnUcW2cr240Za+3eRQzgBxoe/eaQ9os5cwEuwC32n6yLNsd2NL292oNbjNJ+ijwXOAM\n24+WZdtS/I391PbpdcYX/ZMENSDjjKtxm5dvKJdHr/ae+mqd8fSLpK0pJul8I0VHlu0oer1dW66M\n3CrD2m1Z0pbAX1EsWHhvWTwL+BTwPts/rym0Cams3/VUUWXftp8/+VHVKwmqZm0aVyPpVSPJSNI+\n1W7KkubZvrS+6CZG0qeBIyhmNF9EsQT8t223dmmHYe+2LGkb4AXl7ndsPybpMNvfqjOuzVVOuly1\nBcVg/zOBm2z/7uRHVa90kqjfe8Y/pDGqS1Bf0lH355MZyAAcTDHx6M3ALeWn8LZ/ehvqbsu2H7d9\ne/k10luxrR2QsP1g2Sv2YeA1wLXAy4DfnorJCdJJogna9EYxtG94tl8k6UUUs31cJ2ktsJ2knW0/\nUHN4m2sqdltu7f/DsunyrRTPqr9B8Vx3Vb1R1SsJqn5teqMY6jc823cAfwb8maTDKJLVLZJW2/71\neqPbLAeUy4gLeH5lSXExvBOPtvn/4T3ABorel98DDpT01DLvbW5C31xJUPVr0ye+fSUtoXyDK7cp\n91v7rAZA0h/YPn9kv3yO8a1yGYe2Luw3lN2WJV1O90QkoPM5TpuMLCx5YPkFT78/GJhyCSqdJGpQ\nHVcj6Xzbf1B3TL0oZ8cYle2vTVYs/TYMnQZ6VY4Xmm/7/9cdy+YY1v+Hkv6YIhFVk9J6ihlbWj1v\n4uZKgpokwzCuRtI/2j6p7jgGYRgTlKTnUSyUOYNi/r2rgdMo1vW61XZbpwTqiaRL2tS5QFK3CaR3\nBH4L+IDtRZMcUu2SoAZoCMfVDN2b+AhJGyhmXNioimIMyo6THNKESfoXih5h36SY6mgXiut5l+1b\n6oxtMki62fZL6o5joiTtCFwzrH97Y8kzqAHpGFdzIXA8xbiaa8Y8sdmeU06T0/W5me2bupW3xO0U\nqwMPk31t/yqApIsopjeaZfun9YY1aYbi07fthyS16Vl13yRBDc5G42qGYMn3GcBH6J6gTLGqaWu1\n8a52HE/NqGD7F5LWTqHkNDTKda8erjuOOiRBDciQjqtZZbvVSWgMo/aQknSG7Y9NZjB9cpCkkWZL\nAduU+yPNls+rL7RJ0aq7jnLW8s4PsTsC/wW0dmq0icgzqElSGVfze0Arx9UMS5v+ppL0Pduz6o4j\nCpKeZ7vb80IkzRqZBFfSUbavmtzoNp+kvTqKDDw4MiHuVJQENSCd42oq5QKOaOMEq6P9wUvak2IZ\n+7+pIayBk7TG9p51xxGFjjkGv2L7yG510X6Zi29w3t6t0IXWJSeAanKSNF3SH0r6OvBvwK61BTZ4\n+RTXLNWmu87ela1q1oux5RlU9KxjLNcLKZ7b7GN7Zq2B9YGkRxh9doJtJjmcGNtQT7kVT0uCGpwD\nJT3Upby142qA+ylWzv1zitHtlvS6mmPqC9vb1R1D9GwXSe+h+Fsa2abcn15fWNFvaeIbnNsp/lg6\nv3amvX9E76NYPfeTwPskDc0CauUijCPb+3TUzZv8iGIMF1IMen9uZXtk/6Ia44o+SyeJARnmHm+S\n9gVOoOiVuB9wNnCZ7W/XGtgEDPvifsNE0iG2l9UdRwxe7qAGZ8xxNZMZSL9IekG5dPhq239ZzlJw\nCHA0cFfN4U3U0K51NYQukPSfks6RNLvuYGJwkqAGxPY5Y1S3aRXdqo/RMV+d7duBM4Av1xJR/+TB\ne0uULROvoVg76YuSbpV0lqS9aw0s+i5NfDVo67gaSctsHzJK3e0j8761kaQfAtdR3C29otym3D/c\n9g51xRZjk3QQRZPzG4Dv2355zSFFn6QXXz3a+qlg+zHq2t4Vu7r0xLkddZ370RDl2la7UIzD25ai\np2kMiSSoARnScTXLJb3d9oXVQkmnADfWFFNfVBe5kzS9LFtfX0QxFkmvoOikcxxFj9lFwLtt/6jW\nwKKv0sQXPZO0K7AYeIKnE9IcYCvgdba/X1dsE1VOQXU28EcUz2ZF8Yzj721/sM7Y4pkkrQHupUhK\n/2w7d01DKglqQCS9amRKI0n7VJdsljTP9qi9/JqunP7/ReXuirZO3VRVDvY8Blgw8rsqu9OfD1xh\n+6N1xhewYmMCAAACN0lEQVRPk7SX7XvrjiMGLwlqQDKupl0k3Qy8unMplLK576phHdPWRpIuZ4zn\nuLZ/ZxLDiQHKM6jBybiadtmy2zpdttdL2rKOgGJU6bQyRSRBDU7G1bTLE5tZF5PvZNsn1R1EDF4S\n1ODsK2kJxd3SyDbl/j6jnxY1qa4+WyXg2ZMdTIzpwLoDiMmRZ1ADIumVY9VXuzVHRO8k3U3Rxbxr\nU7ntmyY3ohiUJKhJkHE1Ef1TjjFcRvcEZduv6lIeLZQENSAZVxMxGMO8UkA8UyaLHZx3A4cDh9je\nsZzL7TDg5ZLeXW9oERHNlzuoAcm4mojBkPQG4A7bd3aUzwbWpyl9eOQOanBGHVcDZFxNxOabR7Ey\ndaedgL+b5FhigJKgBifjaiIG4wW2r+sstP110gV9qGQc1OBkXE3EYGw3Rl1aJ4ZIEtSA2J5WdwwR\nQ2qVpGNtL60WSjoGWF1TTDEA6SQREa0iaT/gS8D1PHPZl5cBr7H97bpii/5KgoqI1pG0NfBGimVf\nDKwAvgMcb/uddcYW/ZMEFRGtJelgimmPXg/cA1xi+xP1RhX9kmdQEdEqkl5IkZTmAw8An6f4sH1E\nrYFF3+UOKiJaRdKTwNeBt9leVZattr1vvZFFv2UcVES0zTzgPuBaSRdKOpIsAjqUcgcVEa0kaVtg\nLkVT36uATwOLbV9Va2DRN0lQEdF6knag6ChxvO0j644n+iMJKiIiGinPoCIiopGSoCIiopGSoCIi\nopGSoCIiopH+G/JxflF5Hh3cAAAAAElFTkSuQmCC\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x10fe31278>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "\n",
+    "pd.set_option('display.max_rows', None)  \n",
+    "df = pd.read_csv('data/purchases.csv')\n",
+    "\n",
+    "df_sample = df.sample(n=12)\n",
+    "y = np.asarray(df_sample['PRICE'], dtype=\"|S6\")\n",
+    "\n",
+    "cols = df_sample[['DELTA_DAY', 'CATEGORY', 'RESOLD', 'ACTIVE_LOANS', 'DELTA_RAISE', 'UNEMPL']]\n",
+    "cat_columns = ['DELTA_DAY', 'CATEGORY',  'RESOLD', 'ACTIVE_LOANS', 'DELTA_RAISE', 'UNEMPL']\n",
+    "\n",
+    "\n",
+    "for column in cat_columns:\n",
+    "    categorical_mapping = {label: idx for idx, label in enumerate(np.unique(cols['{0}'.format(column)]))}\n",
+    "    cols['{0}'.format(column)] = cols['{0}'.format(column)].map(categorical_mapping)\n",
+    "\n",
+    "from distutils.version import LooseVersion as Version\n",
+    "from sklearn import __version__ as sklearn_version\n",
+    "    \n",
+    "if Version(sklearn_version) < '0.18':\n",
+    "    from sklearn.cross_validation import train_test_split\n",
+    "else:\n",
+    "    from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "X = cols.iloc[:, :].values\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=0)\n",
+    "\n",
+    "\n",
+    "#DETERMINE FEATURE IMPORTANCES\n",
+    "\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "\n",
+    "feat_labels = cols.columns[:]\n",
+    "\n",
+    "forest = RandomForestClassifier(n_estimators=20,\n",
+    "                                random_state=0,\n",
+    "                                n_jobs=-1) # -1 sets n_jobs=n_CPU cores\n",
+    "\n",
+    "forest.fit(X_train, y_train)\n",
+    "importances = forest.feature_importances_\n",
+    "\n",
+    "indices = np.argsort(importances)[::-1]\n",
+    "\n",
+    "for f in range(X_train.shape[1]):\n",
+    "    print(\"%2d) %-*s %f\" % (f + 1, 30, \n",
+    "                            feat_labels[indices[f]], \n",
+    "                            importances[indices[f]]))\n",
+    "\n",
+    "plt.title('Feature Importances')\n",
+    "plt.bar(range(X_train.shape[1]), \n",
+    "        importances[indices],\n",
+    "        color='lightblue', \n",
+    "        align='center')\n",
+    "\n",
+    "plt.xticks(range(X_train.shape[1]), \n",
+    "           feat_labels[indices], rotation=90)\n",
+    "plt.xlim([-1, X_train.shape[1]])\n",
+    "plt.tight_layout()\n",
+    "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.666666666667\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import accuracy_score\n",
+    "\n",
+    "forest = RandomForestClassifier(n_estimators=20,\n",
+    "                                random_state=0,\n",
+    "                                n_jobs=-1) # -1 sets n_jobs=n_CPU cores\n",
+    "\n",
+    "forest.fit(X_train, y_train)\n",
+    "y_predict = forest.predict(X)\n",
+    "y_actual = y\n",
+    "\n",
+    "print(accuracy_score(y_actual, y_predict))"
+   ]
   }
  ],
  "metadata": {
